// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`watch-file-rename-with-interface > clean + build handles deleting orphaned .resi 1`] = `
[
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.clean[working_dir=.]",
  "  clean.execute[scope=root]",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface2]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.clean[working_dir=.]",
  "  clean.execute[scope=root]",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface2]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
]
`;

exports[`watch-file-rename-with-interface > clean + build handles orphaned .resi when .res is renamed 1`] = `
[
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.clean[working_dir=.]",
  "  clean.execute[scope=root]",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface2]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
]
`;

exports[`watch-file-rename-with-interface > clean + build recovers when orphaned .resi is also renamed 1`] = `
[
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.clean[working_dir=.]",
  "  clean.execute[scope=root]",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface2]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.clean[working_dir=.]",
  "  clean.execute[scope=root]",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface2]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
]
`;

exports[`watch-file-rename-with-interface > watch mode detects orphaned .resi when .res is renamed 1`] = `
[
  "rpc.watch[working_dir=.]",
  "  work_queue.watch_initial_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "  work_queue.handle_file_change_build",
  "    file_change[path=packages/with-interface/src/ModuleWithInterface.res, change_type=renamed]",
  "    file_change[path=packages/with-interface/src/ModuleWithInterface2.res, change_type=renamed]",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.parse[dirty_modules=1]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=ModuleWithInterface2]",
]
`;

exports[`watch-file-rename-with-interface > watch mode recovers when both .res and .resi are renamed together 1`] = `
[
  "rpc.watch[working_dir=.]",
  "  work_queue.watch_initial_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "  work_queue.handle_file_change_build",
  "    file_change[path=packages/with-interface/src/ModuleWithInterface.res, change_type=renamed]",
  "    file_change[path=packages/with-interface/src/ModuleWithInterface.resi, change_type=renamed]",
  "    file_change[path=packages/with-interface/src/ModuleWithInterface2.res, change_type=renamed]",
  "    file_change[path=packages/with-interface/src/ModuleWithInterface2.resi, change_type=renamed]",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.parse[dirty_modules=1]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=ModuleWithInterface2]",
]
`;
